[package]
authors = ["Parallel Team"]
description = "Support pallet for shared functionalities"
name = "support"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde         = { version = '1.0.136', features = ['derive'], optional = true }
num-bigint    = { default-features = false, version = '0.4' }
num-traits    = { default-features = false, version = '0.2' }
log           = { version = "0.4", default-features = false }

parity-scale-codec = { version = "3.0.0", features = ["derive"], default-features = false }
scale-info = { version = "2.2.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
frame-system =  { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }

sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }

[dev-dependencies]
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, "branch" = "polkadot-v0.9.37" }

[features]
default = ["std"]
std = [
    'serde/std',
    'parity-scale-codec/std',
    'frame-support/std',
    'frame-system/std',
    'sp-runtime/std',
    'scale-info/std',
    'sp-std/std',
    'num-bigint/std',
    'num-traits/std',
    'sp-core/std',
    'sp-io/std'
]
try-runtime = ['frame-support/try-runtime']
